apps/dssp-python-test-9/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-python-test-9
  labels:
    backstage.io/kubernetes-id: dssp-python-test-9
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-python-test-9
  template:
    metadata:
      labels:
        app: dssp-python-test-9
        backstage.io/kubernetes-id: dssp-python-test-9
    spec:
      containers:
        - name: dssp-python-test-9
          image: chaitanyapandeygspann/dssp-python-test-9:1.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
