apps/dssp-python-test-9/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dssp-python-test-9
spec:
  selector:
    app: dssp-python-test-9
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: dssp-python-test-9-ingress
# spec:
#   ingressClassName: gce
#   rules:
#   - host: dssp-python-test-9.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: dssp-python-test-9
#             port:
#               number: 80
