apps/dssp-python-test-9/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dssp-python-test-9
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2   
spec:
  rules:
    - http:
        paths:
          - path: /dssp-python-test-9(/|$)(.*)               
            pathType: Prefix        
            backend:
              service:
                name: dssp-python-test-9
                port:
                  number: 80
